use subdirectories for indexes

--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,8 @@ paper/data/wgbs/
 .cache
 *.gtf
 hg3*.fa*
-**/star-index/*.txt
-**/star-index/*.tab
-**/star-index/Genome
-**/star-index/SA
-**/star-index/SAindex
+**/star-index/index/*.txt
+**/star-index/index/*.tab
+**/star-index/index/Genome
+**/star-index/index/SA
+**/star-index/index/SAindex
