--- a/paper/containers/data/hg38/bwameth-index/Dockerfile
+++ b/paper/containers/data/hg38/bwameth-index/Dockerfile
@@ -13,4 +13,4 @@
 #################################################################
 # Using jdidion/bwabase as the base image
 FROM jdidion/bwabase
-ADD hg38* /data/index/bwameth/hg38/
+ADD index/* /data/index/bwameth/hg38/
