--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -1,7 +1,7 @@
 profiles {
     local {
         params {
-            threads = [ 4 ]
+            threadCounts = [ 4 ]
         }
 
         process {
@@ -16,7 +16,7 @@ profiles {
 
     cluster {
         params {
-            threads = [ 4, 8, 16 ]
+            threadCounts = [ 4, 8, 16 ]
             dataDir = '/Users/didionjp/Downloads'
         }
 
