--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -1,32 +1,41 @@
+process {
+    $Atropos {
+        ext {
+            compressionArg = { (compression == "nowriter" ? "--no-writer-process" : "--compression ${compression}") }
+        }
+    }
+}
+
 profiles {
     local {
         params {
             threadCounts = [ 4 ]
         }
-
-        process {
-            executor = 'local'
+        
+        executor {
+            name: "local"
+            cpus: 4
         }
-
+        
         docker {
             enabled = true
-            runOptions = "--volumes-from ${params.dataContainer}"
+            runOptions = "--volumes-from ${params.dataContainer} -v $(pwd):${params.dataDir}"
         }
     }
 
     cluster {
         params {
             threadCounts = [ 4, 8, 16 ]
-            dataDir = '/Users/didionjp/Downloads'
         }
 
-        process {
-            executor = 'sge'
+        executor {
+            name = 'sge'
+            queueSize = 1
         }
 
         singularity {
             enabled = true
-            runOptions = "-H $(pwd}"
+            runOptions = '-H $(pwd)'
         }
     }
 }
