--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -9,6 +9,7 @@ process {
 profiles {
     local {
         params {
+            dataDir = '/tmp/atropos'
             threadCounts = [ 4 ]
         }
         
@@ -19,12 +20,12 @@ profiles {
         
         docker {
             enabled = true
-            runOptions = "--volumes-from ${params.dataContainer} -v $(pwd):${params.dataDir}"
         }
     }
 
     cluster {
         params {
+            dataDir = '/scratch/atropos'
             threadCounts = [ 4, 8, 16 ]
         }
 
