More nextflow progress

--- a/paper/containers/data/simulated/Dockerfile
+++ b/paper/containers/data/simulated/Dockerfile
@@ -3,6 +3,6 @@
 # Provides:         /data/simulated/sim_{001,005,01}.{1,2}.{aln,fq}
 # Base Image:       busybox
 #################################################################
-FROM busybox
+FROM blang/busybox-bash
 RUN mkdir -p /data/simulated
 ADD sim* /data/simulated/
