More progress on nextflow script

--- a/paper/containers/tools/python-bash/Dockerfile
+++ b/paper/containers/tools/python-bash/Dockerfile
@@ -11,5 +11,32 @@
 # Pull Cmd:         docker pull jdidion/python_bash
 # Run Cmd:          docker run --rm jdidion/python_bash python -h
 #################################################################
-FROM python:alpine
-RUN apk --no-cache add bash
+FROM python:3-alpine
+RUN apk add --no-cache libstdc++ && \
+    apk add --no-cache \
+        --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community \
+        lapack-dev && \
+    apk add --no-cache --virtual=.build-dependencies \
+        pkgconfig     \
+        g++           \
+        gfortran      \
+        musl-dev      \
+        python3-dev   \
+        libpng-dev    \
+        freetype-dev && \
+    apk add --no-cache \
+        bash        \
+        libpng      \
+        freetype && \
+    ln -s locale.h /usr/include/xlocale.h && \
+    pip install --upgrade pip && \
+    pip install cython && \
+    pip install numpy && \
+    pip install pandas && \
+    pip install matplotlib && \
+    pip install seaborn && \
+    pip install mako && \
+    pip uninstall --yes cython && \
+    rm /usr/include/xlocale.h && \
+    rm -r /root/.cache && \
+    apk del .build-dependencies
