rewrite all tool containers to use the same base image (phusion)

--- a/paper/containers/tools/adapter-removal/Dockerfile
+++ b/paper/containers/tools/adapter-removal/Dockerfile
@@ -6,7 +6,7 @@
 # Description:      AdapterRemoval2 image
 # Website:          https://github.com/MikkelSchubert/adapterremoval
 # Provides:         AdapterRemoval
-# Base Image:       alpine
+# Base Image:       phusion/baseimage:latest
 # Build Cmd:        docker build -f Dockerfile -t mikkelschubert/adapterremoval:latest .
 #                   docker tag mikkelschubert/adapterremoval:latest jdidion/adapterremoval
 # Pull Cmd:         docker pull jdidion/adapterremoval
@@ -14,26 +14,25 @@
 # Note: for me to be able to deploy this, it has to be tagged with my repo
 # name. I'm not trying to take credit for anyone's work :)
 #################################################################
-FROM alpine
+FROM phusion/baseimage:latest
 WORKDIR /tmp
-# Install Dependencies
-RUN apk --no-cache add \
-    bash      \
-    g++       \
-    git       \ 
-    make      \
-    zlib-dev  \
-    bzip2-dev \
+ENV BUILD_PACKAGES \
+    build-essential \
+    g++ \
+    libbz2-dev \
+    zlib1g-dev \
+    git \ 
     perl
-# Install AdapterRemoval
-RUN git clone --recursive https://github.com/MikkelSchubert/adapterremoval && \
-    cd adapterremoval && \
-    make && \
-    mv /tmp/adapterremoval/build/AdapterRemoval /usr/local/bin && \
-# Cleanup
-# TODO: remove deps that are not necessary at runtime
-RUN rm -rf /tmp/*
-# Entrypoints don't work well with NextFlow - it wants to execute commands as
-# if they were in the path.
-#ENTRYPOINT ["/usr/local/bin/AdapterRemoval"]
-#CMD ["--help"]
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get -y upgrade \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
+        $BUILD_PACKAGES \
+    && git clone --recursive https://github.com/MikkelSchubert/adapterremoval \
+    && cd adapterremoval \
+    && make \
+    && mv /tmp/adapterremoval/build/AdapterRemoval /usr/local/bin \
+    && cd .. \
+    && apt-get remove --purge -y $BUILD_PACKAGES $(apt-mark showauto) \
+    && rm -rf /var/lib/apt/lists/* /tmp/* \
+    && locale-gen en_US.UTF-8 \
+    && update-locale LANG=en_US.UTF-8
