--- a/paper/containers/tools/atropos-paper/Dockerfile
+++ b/paper/containers/tools/atropos-paper/Dockerfile
@@ -2,41 +2,34 @@
 # Dockerfile
 #
 # Software:         Atropos
-# Software Version: 1.1.0
+# Software Version: 1.1.4
 # Description:      Atropos image for paper
 # Website:          https://github.com/jdidion/atropos
 # Provides:         atropos
-# Base Image:       snakeego/cython
+# Base Image:       phusion/baseimage:latest
 # Build Cmd:        docker build -f Dockerfile -t jdidion/atropos_paper:latest .
 # Pull Cmd:         docker pull jdidion/atropos_paper
 # Run Cmd:          docker run --rm jdidion/atropos_paper atropos -h
 #################################################################
-FROM snakeego/cython
+FROM phusion/baseimage:latest
 WORKDIR /tmp
-
-# GCC
-RUN export NPROC=$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) \
-    && apk --no-cache add --virtual build-deps \
-        musl-dev \
-        linux-headers \
-        bash \
-        g++ \
-        git \
-        zlib-dev bzip2-dev xz-dev
-
-# Additional Atropos dependencies
-RUN pip install tqdm pysam jinja2
-
-# Clone repo and install
-RUN git clone --recursive https://github.com/jdidion/atropos && \
-    cd atropos && \
-    make install
-
-# Cleanup
-# TODO: remove deps that are not necessary at runtime
-RUN rm -rf /tmp/*
-
-# Entrypoints don't work well with NextFlow - it wants to execute commands as
-# if they were in the path.
-#ENTRYPOINT ["/atropos/bin/atropos"]
-#CMD ["--help"]
+ENV BUILD_PACKAGES \
+    git
+ENV RUNTIME_PACKAGES \
+    python3-pip
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get -y upgrade \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
+        $BUILD_PACKAGES \
+        $RUNTIME_PACKAGES \
+    && ln -s /usr/bin/python3 /usr/bin/python \
+    && ln -s /usr/bin/pip3 /usr/bin/pip \
+    && pip install cython \
+    && git clone --recursive https://github.com/jdidion/atropos \
+    && cd atropos \
+    && make install \
+    && cd ..\
+    && apt-get remove --purge -y $BUILD_PACKAGES \
+    && rm -rf /var/lib/apt/lists/* /tmp/* \
+    && locale-gen en_US.UTF-8 \
+    && update-locale LANG=en_US.UTF-8
