--- a/paper/containers/tools/skewer/Dockerfile
+++ b/paper/containers/tools/skewer/Dockerfile
@@ -6,32 +6,30 @@
 # Description:      skewer image
 # Website:          https://github.com/relipmoc/skewer
 # Provides:         skewer
-# Base Image:       alpine
+# Base Image:       phusion/baseimage:latest
 # Build Cmd:        docker build -f Dockerfile -t relipmoc/skewer:latest .
 #                   docker tag relipmoc/skewer:latest jdidion/seqpurge
 # Pull Cmd:         docker pull jdidion/skewer
-# Run Cmd:          docker run
+# Run Cmd:          docker run jdidion/skewer
 # Note: for me to be able to deploy this, it has to be tagged with my repo
 # name. I'm not trying to take credit for anyone's work :)
 #################################################################
-FROM alpine
+FROM phusion/baseimage:latest
 WORKDIR /tmp
-# install deps
-RUN apk add --no-cache \
-    g++  \
-    make \
-    git  \
-    bash
-# install skewer
-RUN git clone --recursive https://github.com/relipmoc/skewer && \
-    cd skewer && \
-    make && \
-    mv /tmp/skewer/skewer /usr/local/bin && \
-    rm -Rf /tmp/skewer
-# cleanup
-# TODO: remove deps that are not necessary at runtime
-RUN rm -rf /var/cache/apk/* /tmp/*
-# Entrypoints don't work well with NextFlow - it wants to execute commands as
-# if they were in the path.
-#ENTRYPOINT ["/usr/local/bin/skewer"]
-#CMD ["--help"]
+ENV BUILD_PACKAGES \
+    build-essential \
+    g++ \
+    git
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get -y upgrade \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
+        $BUILD_PACKAGES \
+    && git clone --recursive https://github.com/relipmoc/skewer \
+    && cd skewer \
+    && make \
+    && mv /tmp/skewer/skewer /usr/local/bin \
+    && cd .. \
+    && apt-get remove --purge -y $BUILD_PACKAGES $(apt-mark showauto) \
+    && rm -rf /var/lib/apt/lists/* /tmp/* \
+    && locale-gen en_US.UTF-8 \
+    && update-locale LANG=en_US.UTF-8
