--- a/paper/containers/tools/skewer/Dockerfile
+++ b/paper/containers/tools/skewer/Dockerfile
@@ -20,16 +20,20 @@ ENV BUILD_PACKAGES \
     build-essential \
     g++ \
     git
+ENV RUNTIME_PACKAGES \
+    time    
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get -y upgrade \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
         $BUILD_PACKAGES \
+        $RUNTIME_PACKAGES \
     && git clone --recursive https://github.com/relipmoc/skewer \
     && cd skewer \
     && make \
     && mv /tmp/skewer/skewer /usr/local/bin \
     && cd .. \
-    && apt-get remove --purge -y $BUILD_PACKAGES $(apt-mark showauto) \
+    && apt-get remove --purge -y $BUILD_PACKAGES \
+    && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/* /tmp/* \
     && locale-gen en_US.UTF-8 \
     && update-locale LANG=en_US.UTF-8
