--- a/paper/containers/tools/adapter-removal/Dockerfile
+++ b/paper/containers/tools/adapter-removal/Dockerfile
@@ -23,16 +23,20 @@ ENV BUILD_PACKAGES \
     zlib1g-dev \
     git \ 
     perl
+ENV RUNTIME_PACKAGES \
+    time
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get -y upgrade \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
         $BUILD_PACKAGES \
+        $RUNTIME_PACKAGES \
     && git clone --recursive https://github.com/MikkelSchubert/adapterremoval \
     && cd adapterremoval \
     && make \
     && mv /tmp/adapterremoval/build/AdapterRemoval /usr/local/bin \
     && cd .. \
-    && apt-get remove --purge -y $BUILD_PACKAGES $(apt-mark showauto) \
+    && apt-get remove --purge -y $BUILD_PACKAGES \
+    && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/* /tmp/* \
     && locale-gen en_US.UTF-8 \
     && update-locale LANG=en_US.UTF-8
