--- a/paper/containers/tools/seqpurge/Dockerfile
+++ b/paper/containers/tools/seqpurge/Dockerfile
@@ -2,7 +2,7 @@
 # Dockerfile
 #
 # Software:         SeqPurge
-# Software Version: latest
+# Software Version: 0.1 (9e8d99d)
 # Description:      SeqPurge image
 # Website:          https://github.com/imgag/ngs-bits
 # Provides:         SeqPurge
@@ -11,11 +11,15 @@
 #                   docker tag imgag/ngs-bits:latest jdidion/seqpurge
 # Pull Cmd:         docker pull jdidion/seqpurge
 # Run Cmd:          docker run
-# Note: for me to be able to deploy this, it has to be tagged with my repo
+# Note: Apparently they do not use tags or releases for ngs-bits, so I
+# specifically checkout the commit that contains the most recent update
+# to SeqPurge (as of this writing).
+# Note: For me to be able to deploy this, it has to be tagged with my repo
 # name. I'm not trying to take credit for anyone's work :)
 #################################################################
 FROM phusion/baseimage:latest
 WORKDIR /tmp
+ENV VERSION 9e8d99d
 ENV BUILD_PACKAGES \
     software-properties-common \
     git \
@@ -36,6 +40,7 @@ RUN apt-get update \
         $BUILD_PACKAGES \
         $RUNTIME_PACKAGES \
     && git clone --recursive https://github.com/imgag/ngs-bits.git \
+    && git checkout $VERSION \
     && cd ngs-bits \
     && make build_3rdparty \
     && make build_tools_release \
