fix star-index containers

--- a/paper/containers/data/hg38/star-index/Dockerfile
+++ b/paper/containers/data/hg38/star-index/Dockerfile
@@ -7,9 +7,9 @@
 # Website:          https://github.com/alexdobin/STAR
 # Provides:         STAR
 # Base Image:       jedisct1/phusion-baseimage-latest
-# Build Cmd:        docker build -t jdidion/starbase:latest .
-# Pull Cmd:         docker pull jdidion/starbase
-# Run Cmd:          docker run --rm jdidion/starbase STAR
+# Build Cmd:        docker build -t jdidion/star_hg38index:latest .
+# Pull Cmd:         docker pull jdidion/star_hg38index
+# Run Cmd:          docker run --rm jdidion/star_hg38index STAR
 #################################################################
 FROM jdidion/bwa
 ADD index/* /data/index/star/hg38/
