--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -29,8 +29,9 @@ profiles {
         }
         
         executor {
-            name: "local"
-            cpus: 4
+            name = "local"
+            cpus = 4
+            queueSize = 1
         }
         
         docker {
