--- a/paper/containers/data/hg38/reference/Dockerfile
+++ b/paper/containers/data/hg38/reference/Dockerfile
@@ -5,7 +5,8 @@
 # Base Image:       busybox
 #################################################################
 FROM busybox
-RUN mkdir -p /data/reference/hg38
+RUN mkdir -p /data/reference/hg38 \
+ && mkdir -p /data/annotations/hg38
 ADD hg38.fa /data/reference/hg38/hg38.fa
 ADD hg38.fa.fai /data/reference/hg38/hg38.fa.fai
 ADD gencode.v26.annotation.gtf /data/annotations/hg38/gencode.v26.annotation.gtf
